fixed height in last div

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 </div>
             </div>
         </div>
-        <div class="row p-0 m-0" style="height: 15vh; overflow: hidden">
+        <div class="row p-0 m-0" style="overflow: hidden">
             <div class="col-md-2 d-flex justify-content-center align-items-center borders">
                 <div class="right_triangle" id="right_triangle"></div>
             </div>
